@@ -1,5 +1,12 @@
 2006-09-11  Aaron Bockover  <abock@gnome.org>
 
+	* Abakos/Abakos.Compiler/Functions.cs: Added functions, and E methods;
+	functions prints a list of available functions
+
+	* Abakos/Main.cs: Nicer output
+
+2006-09-11  Aaron Bockover  <abock@gnome.org>
+
 	* Abakos: Just a fun little expression parser/evaluator I've started
 	writing this weekend after looking with much nostalgia over an old
 	version of something similar I implemented in C many years ago; this
